ircv3_parse_derive/tests/ui/fail/11_ser_missing_source_name.rs
use ircv3_parse_derive::ToMessage;

#[derive(ToMessage)]
struct M<'a> {
    #[irc(source = "user")]
    field: &'a str,
}

fn main() {}
